Working CRUD concept for Druzyna
